# CareSense-Project-Demo

./: .gitignore  3364mach.cabal  Dockerfile  README.md
app/: Main.hs
asm/: count.bill  prime.bill
src/: Binary.hs  Loader.hs  MachTypes.hs  Parser.hs  Simulator.hs
tests/: test.hs
