cabal-version: 2.4
name: 3364mach
version: 0.1.0.0


library
    hs-source-dirs:     src
    exposed-modules:    Binary
                      , Loader
                      , Parser
                      , Simulator
                      , MachTypes
    build-depends:      base
                      , array
                      , mtl
                      , HUnit
    default-language:   Haskell2010

executable test
    hs-source-dirs:     tests
    main-is:            test.hs
    build-depends:      base
                        , 3364mach
                        , HUnit
                        , array
    default-language:   Haskell2010


executable 3364mach
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base, 3364mach, array
    default-language:   Haskell2010